--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-
-
 [project]
 name = "nabla_vl"
 version = "0.1.0"
@@ -15,7 +13,7 @@ dependencies = [
     "shortuuid>=1.0.13",
     "accelerate>=1.0.0",
     "peft>=0.13.1",
-    "bitsandbytes>=0.44.1",
+    'bitsandbytes>=0.44.1 ; platform_system == "Linux"',
     "pydantic>=2.9.2",
     "markdown2[all]>=2.5.0",
     "numpy<2.0.0",
@@ -53,13 +51,13 @@ dependencies = [
     "pycocoevalcap>=1.2",
     "streamlit>=1.40.2",
     "schedulefree>=1.4",
-    "aria2>=0.0.1b0",
+    'aria2>=0.0.1b0 ; platform_system == "Linux"',
     "opencv-python>=4.10.0.84",
     "langdetect>=1.0.9",
     "levenshtein>=0.26.1",
     "click>=8.1.8",
     "openpyxl>=3.1.5",
-    "decord>=0.6.0",
+    'decord>=0.6.0 ; platform_system == "Linux"',
     "pymupdf>=1.25.2",
     "kaggle>=1.6.17",
     "img2dataset>=1.45.0",
