fix multiple image token bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "black>=25.1.0",
     "isort>=6.0.0",
     "flake8>=7.1.1",
-    "uv>=0.6.0",
+    "uv>=0.6.5",
     "pycocoevalcap>=1.2",
     "streamlit>=1.40.2",
     "schedulefree>=1.4",
@@ -58,9 +58,23 @@ dependencies = [
     "click>=8.1.8",
     "openpyxl>=3.1.5",
     'decord>=0.6.0 ; platform_system == "Linux"',
-    "pymupdf>=1.25.2",
+    "pymupdf>=1.25.3",
     "kaggle>=1.6.17",
     "img2dataset>=1.45.0",
+    "chainlit>=2.3.0",
+    "tweepy>=4.15.0",
+    "annoy>=1.17.3",
+    "open-clip-torch>=2.31.0",
+    "sentence-transformers>=3.4.1",
+    "fugashi>=1.4.0",
+    "unidic-lite>=1.0.8",
+    "imagehash>=4.3.2",
+    "asyncpg>=0.30.0",
+    "boto3>=1.37.10",
+    "azure-storage-blob>=12.24.1",
+    "aiohttp>=3.11.13",
+    "google-cloud-storage>=3.1.0",
+    "vllm>=0.8.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
