--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
 name = "nabla_vl"
 version = "0.1.0"
-description = "Buliding SOTA large Vision-Language Model (VLM)"
+description = "Japanese Vision-Language Model (VLM)"
 authors = [
-    { name = "takuyashintate", email = "shintate@nablas.com" }
+    { name = "Haoxiang Shi", email = "haoxiang.shi@example.com" },
+    { name = "Takuya Shintate", email = "shintate@nablas.com" },
+    { name = "Zijie Jiang", email = "zijie.jiang@nablas.com" }
 ]
 dependencies = [
     "pip>=24.2",
@@ -40,14 +42,14 @@ dependencies = [
     "sqlitedict>=2.1.0",
     "tenacity>=9.0.0",
     "hf-transfer>=0.1.8",
-    "huggingface-hub[cli]>=0.26.2",
+    "huggingface-hub>=0.30.2",
     "pytablewriter>=1.2.0",
     "jupyter>=1.1.1",
     "tqdm>=4.66.6",
     "black>=25.1.0",
     "isort>=6.0.0",
     "flake8>=7.1.1",
-    "uv>=0.6.5",
+    "uv>=0.6.14",
     "pycocoevalcap>=1.2",
     "streamlit>=1.40.2",
     "schedulefree>=1.4",
@@ -58,7 +60,7 @@ dependencies = [
     "click>=8.1.8",
     "openpyxl>=3.1.5",
     'decord>=0.6.0 ; platform_system == "Linux"',
-    "pymupdf>=1.25.3",
+    "pymupdf>=1.25.5",
     "kaggle>=1.6.17",
     "tweepy>=4.15.0",
     "annoy>=1.17.3",
@@ -73,6 +75,7 @@ dependencies = [
     "aiohttp>=3.11.13",
     "google-cloud-storage>=3.1.0",
     "vllm>=0.8.3",
+    "filelock>=3.18.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
