--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ dependencies = [
     "google-cloud-storage>=3.1.0",
     "vllm>=0.8.3",
     "filelock>=3.18.0",
+    "build>=1.2.2.post1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
